# jobsync

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_MASTER_REPORT.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  E2E_TEST_REPORT.md  FRONTEND_COMPLETE.md  FRONTEND_INTEGRATION.md  HYBRID_RESUME_ANALYSIS.md  LICENSE  LOCATION_FEATURE.md  PREVIEW_TEST.md  PRODUCTION_HARDENING_REPORT.md  PROJECT_MASTER_STATUS.md  PROJECT_STRUCTURE.md  PROMPT.MD  QUICKSTART.md  README.md  README_rag.md  REPORT.md  SUBMISSION_COMPLETE.md  TEST_REPORT.md  UPGRADE_SUMMARY.md  VERIFICATION_REPORT_2026-05-27.md  analysis.md  app.py  deepseek_text_20260428_1acbfc.txt  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  ingest.py  playwright.config.js  prompt.txt  pyproject.toml  (+14 more)
backend/: .env.example  alembic.ini  app.py  celery_app.py  config.py  database.py  job_indexer.py  main.py  models.py  monitoring.py  requirements-dev.txt  requirements.txt  schemas.py  security.py  vercel.json
blueprints/: cover_letter_blueprint.json  resume_blueprint.json
config/: pakistan_jobs_config.py
core/: __init__.py  cover_letter_blueprint_engine.py  daily_scout.py  database.py  deduplicator.py  engine.py  job_checker.py  job_search.py  llm_provider.py  match_explainer.py  normalizer.py  pdf_generator.py  rag_service.py  resume_analyzer.py  resume_artifacts.py  resume_blueprint_engine.py  resume_standards.py  resume_template.py  resume_validator.py  scheduler.py  skill_extractor.py  url_ingestion.py
data/: labeled_resume_jd_pairs.csv  skills_mapping.json
docs/: uni_module_analysis.md  workflow_diagrams.md
e2e/: full_job_flow.spec.js
evaluation/: baseline_metrics.json  cross_encoder_metrics.json  metrics.json  public_dataset_metrics.json
extension/: manifest.json  popup.html  popup.js
frontend/: Dockerfile  README.md  index.html  nginx.conf  openapi.json  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
monitoring/: prometheus.yml
samples/: sample_job_poster.txt  sample_kb.txt  sample_rag_job.json  sample_resume.txt
scrapers/: bing_scraper.py  brightspyre_scraper.py  careers_page_scraper.py  common.py  indeed_scraper.py  indexed_jobs_scraper.py  linkedin_indexed_scraper.py  mustakbil_scraper.py  rozee_scraper.py
scripts/: _call_search.py  _check_profile_import.py  _fetch_openapi.py  _post_profile_test.py  _sse_client.py  add_skill_columns_direct.py  count_jobs.py  (+68 more)
(+168 files in other folders)
