[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsync"
version = "2.0.0"
description = "AI-powered job search and application management platform"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv==1.0.1",
    "groq==0.4.2",
    "openai>=1.0.0",
    "fpdf==1.7.2",
    "reportlab==4.0.7",
    "beautifulsoup4==4.12.2",
    "lxml>=4.9.4,<5.0.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.27",
    "pydantic==2.6.1",
    "python-multipart==0.0.9",
    "requests==2.31.0",
    "rapidfuzz==3.14.3",
    "fake-useragent==2.2.0",
    "pypdf==3.16.0",
    "docx2txt==0.8",
    "alembic>=1.13.0",
    "tenacity>=8.2.0",
    "email-validator>=2.0.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "cryptography>=40.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.vercel]
entrypoint = "index:app"
